--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,8 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+## 使用Next主题
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
